@@ -5,6 +5,10 @@ package de.uka.ilkd.key.java;
 
 import java.io.File;
 import java.io.IOException;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.function.Predicate;
 
@@ -49,9 +53,9 @@ public class ProofJavaProgramFactoryTest {
 
     @Test
     public void testAttachCommentsCompilationUnit_AssertsFalse() throws IOException {
-        File inputFile = new File(FindResources.getTestResourcesDirectory(),
-            "de/uka/ilkd/key/java/recoderext/AssertsFalse.java");
-        final CompilationUnit cu = getCompilationUnit(inputFile);
+        var inputFile = FindResources.getTestResourcesDirectory()
+                .resolve("de/uka/ilkd/key/java/recoderext/AssertsFalse.java");
+        final CompilationUnit cu = getCompilationUnit(inputFile.toFile());
 
         Optional<Method> om = findMethod(cu, "AssertsFalse", "m");
         LOGGER.debug("{}", cu);
@@ -67,9 +71,9 @@ public class ProofJavaProgramFactoryTest {
 
     @Test
     public void testAttachCommentsCompilationUnit_Steinhofel1() throws IOException {
-        File inputFile = new File(FindResources.getTestResourcesDirectory(),
-            "de/uka/ilkd/key/java/recoderext/Steinhoefel1.java");
-        final CompilationUnit cu = getCompilationUnit(inputFile);
+        var inputFile = FindResources.getTestResourcesDirectory()
+                .resolve("de/uka/ilkd/key/java/recoderext/Steinhoefel1.java");
+        final CompilationUnit cu = getCompilationUnit(inputFile.toFile());
 
         Optional<Method> ofib = findMethod(cu, "Steinhoefel1", "fib");
         LOGGER.debug("{}", cu);
@@ -108,9 +112,9 @@ public class ProofJavaProgramFactoryTest {
 
     @Test
     public void testAttachCommentsCompilationUnit_SetStatements() throws IOException {
-        File inputFile = new File(FindResources.getTestResourcesDirectory(),
+        var inputFile = FindResources.getTestResourcesDirectory().resolve(
             "de/uka/ilkd/key/java/recoderext/SetInMethodBody.java");
-        final CompilationUnit cu = getCompilationUnit(inputFile);
+        final CompilationUnit cu = getCompilationUnit(inputFile.toFile());
 
         Optional<Method> ofib = findMethod(cu, "SetInMethodBody", "foo");
         LOGGER.debug("{}", cu);
@@ -137,12 +141,12 @@ public class ProofJavaProgramFactoryTest {
 
     @Test
     public void testAttachCommentsCompilationUnit_SmansEtAlArrayList() throws IOException {
-        File inputFile = new File("../key.ui/examples/heap/SmansEtAl/src/ArrayList.java");
+        Path inputFile = Paths.get("../key.ui/examples/heap/SmansEtAl/src/ArrayList.java");
         // Regenerate this file by copying the console output
-        File expectedFile = new File(FindResources.getTestResourcesDirectory(),
+        Path expectedFile = FindResources.getTestResourcesDirectory().resolve(
             "de/uka/ilkd/key/java/testAttachCommentsCompilationUnit_SmansEtAlArrayList.txt");
-        String expected = StringUtil.replaceNewlines(IOUtil.readFrom(expectedFile), "\n");
-        final CompilationUnit cu = getCompilationUnit(inputFile);
+        String expected = StringUtil.replaceNewlines(Files.readString(expectedFile), "\n");
+        final CompilationUnit cu = getCompilationUnit(inputFile.toFile());
 
         // Optional<Method> ofib = findMethod(cu, "Steinhoefel1", "fib");
 
@@ -154,12 +158,13 @@ public class ProofJavaProgramFactoryTest {
 
     @Test
     public void testAttachCommentsCompilationUnit_LockSpec() throws IOException {
-        File inputFile = new File("../key.ui/examples/heap/permissions/lockspec/src/LockSpec.java");
+        Path inputFile =
+            Paths.get("../key.ui/examples/heap/permissions/lockspec/src/LockSpec.java");
         // Regenerate this file by copying the console output
-        File expectedFile = new File(FindResources.getTestResourcesDirectory(),
-            "de/uka/ilkd/key/java/testAttachCommentsCompilationUnit_LockSpec.txt");
-        String expected = StringUtil.replaceNewlines(IOUtil.readFrom(expectedFile), "\n");
-        final CompilationUnit cu = getCompilationUnit(inputFile);
+        Path expectedFile = FindResources.getTestResourcesDirectory()
+                .resolve("de/uka/ilkd/key/java/testAttachCommentsCompilationUnit_LockSpec.txt");
+        String expected = StringUtil.replaceNewlines(Files.readString(expectedFile), "\n");
+        final CompilationUnit cu = getCompilationUnit(inputFile.toFile());
 
         String out = getActualResult(cu);
         LOGGER.debug("{}", out);
@@ -211,14 +216,14 @@ public class ProofJavaProgramFactoryTest {
         Assumptions.assumeTrue(inputFile.exists(),
             "Required input file " + inputFile + " does not exists!");
         String content = IOUtil.readFrom(inputFile);
-        return r2k.recoderCompilationUnits(new String[] { content }).get(0);
+        return r2k.recoderCompilationUnits(new String[] { content }).getFirst();
     }
 
     private Optional<Method> findMethod(CompilationUnit cu, String className, String methodName) {
         for (int i = 0; i < cu.getTypeDeclarationCount(); i++) {
             TypeDeclaration td = cu.getTypeDeclarationAt(i);
             if (td instanceof ClassDeclaration clazz) {
-                if (clazz.getName().equals(className)) {
+                if (Objects.equals(clazz.getName(), className)) {
                     return clazz.getMethods().stream().filter(it -> it.getName().equals(methodName))
                             .findFirst();
                 }
